--- a/motor_database.cfg
+++ b/motor_database.cfg
@@ -460,6 +460,14 @@ holding_torque: 0.59
 max_current: 2.0
 steps_per_revolution: 200
 
+[motor_constants fysetc-17D2201Z-22B-500]
+#Fysetc Prusa Clone
+resistance: 6.5
+inductance: 0.013
+holding_torque: 0.49
+max_current: 1.0
+steps_per_revolution: 200
+
 [motor_constants fysetc-42HC40-204A-300N84]
 #Fysetc bom Trident Z integrated leadscrew steppers
 resistance: 1.1
