--- a/motor_database.cfg
+++ b/motor_database.cfg
@@ -443,7 +443,6 @@ holding_torque: 0.32
 max_current: 0.4
 steps_per_revolution: 200
 
-
 [motor_constants TB-3544]
 #Fysetc bom Voron 2.4 steppers
 resistance: 1.8
@@ -461,10 +460,18 @@ max_current: 2.0
 steps_per_revolution: 200
 
 [motor_constants fysetc-17D2201Z-22B-500]
-#Fysetc Prusa Clone
+#Fysetc Prusa Clone X & Y
 resistance: 6.5
 inductance: 0.013
 holding_torque: 0.49
+max_current: 1.0
+steps_per_revolution: 200
+
+[motor_constants fysetc-17HD0201Z-321N-550]
+#Fysetc Prusa Clone Z
+resistance: 8.0
+inductance: 0.0095
+holding_torque: 0.34
 max_current: 1.0
 steps_per_revolution: 200
 
@@ -475,8 +482,6 @@ inductance: 0.0026
 holding_torque: 0.45
 max_current: 2.0
 steps_per_revolution: 200
-
-
 
 ### Other manufacturers
 
